log
Tue 14 May 2024 04:59:56 PM UTC: 
 tests:  0|5
total_score: 0/70
5f7ac52
Tue 14 May 2024 05:19:29 PM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:69:30: error: void value not ignored as it ought to be
   69 |                         list = push(list, n);
      |                              ^
Compilation failed
9ca708f
